# MCP

./: .gitignore  README.md  app.py  plan.txt  pyproject.toml  requirements.txt  vercel.json
api/: register.py
src/fittrack_mcp/: __init__.py  auth.py  http_auth.py  register.py  request_user.py  server.py  supabase_client.py  tools.py
tests/: test_auth.py  test_server.py  test_supabase_client.py  test_tools.py
