[project]
name = "fittrack-mcp-server"
version = "0.1.0"
description = "Phase 0 FitTrack MCP server with fake data and token checking."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
]

[project.scripts]
fittrack-mcp = "fittrack_mcp.server:main"
fittrack-mcp-stdio = "fittrack_mcp.server:main_stdio"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/fittrack_mcp"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
